k8s/overlays/prod/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "80"
    prometheus.io/path: "/api/auth/metrics"
spec:
  type: ClusterIP
